--- a/ado/infra/pipeline.yml
+++ b/ado/infra/pipeline.yml
@@ -35,39 +35,39 @@ stages:
                 pathToInfrastructureDirectory: ${{ variables.pathtoInfrastructureDirectory }}
                 pathToBicepEnvironmentVariablesDirectory: ${{ variables.pathToBicepEnvironmentVariablesDirectory }}
                 resourceGroupName: ${{ variables.devResourceGroupName }}
-  - stage: Tst
-    dependsOn: Dev 
-    jobs:
-    - deployment: Tst_Deploy
-      pool:
-        vmImage: 'windows-latest'
-      environment: ${{ variables.tstEnvironmentName }}
-      strategy:
-        runOnce:
-          deploy:
-            steps:
-            - template: deploy-bicep.yml
-              parameters:
-                environmentName: ${{ variables.tstEnvironmentName }}
-                pathToInfrastructureDirectory: ${{ variables.pathtoInfrastructureDirectory }}
-                pathToBicepEnvironmentVariablesDirectory: ${{ variables.pathToBicepEnvironmentVariablesDirectory }}
-                serviceConnectionName: ${{ variables.tstServiceConnectionName }} 
-                resourceGroupName: ${{ variables.tstResourceGroupName }}
-  - stage: Prd
-    dependsOn: Tst
-    jobs:
-    - deployment: Prd_Deploy
-      pool:
-        vmImage: 'windows-latest'
-      environment: ${{ variables.prdEnvironmentName }}
-      strategy:
-        runOnce:
-          deploy:
-            steps:
-            - template: deploy-bicep.yml
-              parameters:
-                environmentName: ${{ variables.prdEnvironmentName }}
-                pathToInfrastructureDirectory: ${{ variables.pathtoInfrastructureDirectory }}
-                pathToBicepEnvironmentVariablesDirectory: ${{ variables.pathToBicepEnvironmentVariablesDirectory }}
-                serviceConnectionName: ${{ variables.prdServiceConnectionName }}
-                resourceGroupName: ${{ variables.prdResourceGroupName }}
+  # - stage: Tst
+  #   dependsOn: Dev 
+  #   jobs:
+  #   - deployment: Tst_Deploy
+  #     pool:
+  #       vmImage: 'windows-latest'
+  #     environment: ${{ variables.tstEnvironmentName }}
+  #     strategy:
+  #       runOnce:
+  #         deploy:
+  #           steps:
+  #           - template: deploy-bicep.yml
+  #             parameters:
+  #               environmentName: ${{ variables.tstEnvironmentName }}
+  #               pathToInfrastructureDirectory: ${{ variables.pathtoInfrastructureDirectory }}
+  #               pathToBicepEnvironmentVariablesDirectory: ${{ variables.pathToBicepEnvironmentVariablesDirectory }}
+  #               serviceConnectionName: ${{ variables.tstServiceConnectionName }} 
+  #               resourceGroupName: ${{ variables.tstResourceGroupName }}
+  # - stage: Prd
+  #   dependsOn: Tst
+  #   jobs:
+  #   - deployment: Prd_Deploy
+  #     pool:
+  #       vmImage: 'windows-latest'
+  #     environment: ${{ variables.prdEnvironmentName }}
+  #     strategy:
+  #       runOnce:
+  #         deploy:
+  #           steps:
+  #           - template: deploy-bicep.yml
+  #             parameters:
+  #               environmentName: ${{ variables.prdEnvironmentName }}
+  #               pathToInfrastructureDirectory: ${{ variables.pathtoInfrastructureDirectory }}
+  #               pathToBicepEnvironmentVariablesDirectory: ${{ variables.pathToBicepEnvironmentVariablesDirectory }}
+  #               serviceConnectionName: ${{ variables.prdServiceConnectionName }}
+  #               resourceGroupName: ${{ variables.prdResourceGroupName }}
