--- a/ado/infra/variables.yml
+++ b/ado/infra/variables.yml
@@ -4,6 +4,6 @@ parameters:
   - name: bicepEnvironmentVariablesDirectoryName
 
 variables:
-  pathToBicepEnvironmentVariablesDirectory: $(System.DefaultWorkingDirectory)/${{ parameters.infrastructureDirectoryName }}/${{ parameters.bicepEnvironmentVariablesDirectoryName }}
+  pathToBicepEnvironmentVariablesDirectory: $(System.DefaultWorkingDirectory)/${{ parameters.infrastructureDirectoryName }}/env/${{ parameters.bicepEnvironmentVariablesDirectoryName }}
   pathToAdoScriptDirectory: $(System.DefaultWorkingDirectory)/${{ parameters.adoScriptDirectoryName }}
   pathToInfrastructureDirectory: $(System.DefaultWorkingDirectory)/${{ parameters.infrastructureDirectoryName }}
